# ukncbtl-qt-cmake

./: .gitmodules  CMakeLists.txt  README.md
src/: ukncbtl-qt-i18n.qrc  ukncbtl-qt.rc
